--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/privacy">Polityka prywatności</a>  -  <a href="/tos">Regulamin</a></p>
             </div>
           </div>
         </div>
