Privacy policy button

--- a/privacy.html
+++ b/privacy.html
@@ -20,12 +20,12 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>prywatny<br>streetwear bot.</h1><br>
-        <a href="#" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
+        <a href="#more" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
         <!--<a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
       </div>
       <img src="example.png" class="example">
     </div>
-    <section class="service-area section-padding2" style="background-color: #fff">
+    <section class="service-area section-padding2" style="background-color: #fff" id="more">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
