--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome-animation@0.2.1/dist/font-awesome-animation.min.css" integrity="sha256-OksDpsEotGZHyoFCHRsdsld3UaZrCcE2d8jXU8rBjHo=" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.js" integrity="sha256-XxVUnbo0rzQhy0PNnoY4u+ZOf8rbwkkEhOmToUXESr0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flipdown@0.3.2/dist/flipdown.min.css" integrity="sha256-Ns0hLsJnCW1f44p7eahJRJOeiGt/hstfzjozNFJzGjw=" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
    </head>
    <body style="background-color: #fff5f5; overflow-x: hidden">
@@ -20,8 +22,9 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
-        <a href="#" class="btn radius-btn">JUŻ WKRÓTCE!</a>
-        <!--<a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
+        <!--<a href="#" class="btn radius-btn">JUŻ WKRÓTCE!</a>
+        <a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
+        <div id="flipdown" class="flipdown"></div> <script>var _0x10fe=['getEl','versi','MINUT','entLi','ement','DNI','ngs','inner','start','SEKUN','ver','stene','DOMCo','ById','addEv'];(function(_0x52658e,_0x3d4ad3){var _0x275f57=function(_0x34220a){while(--_0x34220a){_0x52658e['push'](_0x52658e['shift']());}};_0x275f57(++_0x3d4ad3);}(_0x10fe,0x2267+0x57*-0x4a+-0x802));var _0x2ce0=function(_0x52658e,_0x3d4ad3){_0x52658e=_0x52658e-(0x2267+0x57*-0x4a+-0x941);var _0x275f57=_0x10fe[_0x52658e];return _0x275f57;};var _0x2afece=_0x2ce0;document[_0x2afece('0xa')+_0x2afece('0xe')+_0x2afece('0x7')+'r'](_0x2afece('0x8')+'ntent'+'Loade'+'d',()=>{var _0x18830a=_0x2afece,_0x3fcde9={};_0x3fcde9['headi'+_0x18830a('0x2')]=[_0x18830a('0x1'),'GODZI'+'N',_0x18830a('0xd'),_0x18830a('0x5')+'D'];var _0xa4aba1=new FlipDown(0x6534e661+0xb6*0x91a167+-0x6cf97dac,_0x3fcde9)[_0x18830a('0x4')](),_0x26db81=document[_0x18830a('0xb')+_0x18830a('0x0')+_0x18830a('0x9')](_0x18830a('0x6'));_0x26db81[_0x18830a('0x3')+'HTML']=_0xa4aba1[_0x18830a('0xc')+'on'];});</script> <style>.rotor-group-heading{font-family:"Roboto"}</style>
       </div>
       <img src="example.png" class="example">
     </div>
