Terms of Service

--- a/tos.html
+++ b/tos.html
@@ -29,12 +29,109 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
             <div class="section-title text-center">
-              <h2>Regulamin</h2>
+              <h2>Regulamin świadczenia usług drogą elektroniczną</h2>
             </div>
           </div>
         </div>
         <div>
-          <h5><b></b>Pojawi się wkrótce.</h5><br>
+          <h5><b>§</b> Postanowienia ogólne</h5><br>
+          <p><b>1.</b> Ilekroć w niniejszym Regulaminie są użyte następujące określenia, należy przez nie rozumieć:</p>
+          <p class="ml-3">
+            <b>2.</b> <u>Serwis</u> - serwis internetowy dostępny pod adresem <a href="https://dropthon.com/" class="text-danger">dropthon.com</a>;<br>
+            <b>3.</b> <u>Administrator, Usługodawca</u> - Stanisławowski Research & Development;<br>
+            <b>4.</b> <u>Użytkownik, Usługobiorca</u> - każda osoba, która dokonała rejestracji konta w Serwisie oraz korzysta z jego funkcjonalności;<br>
+            <b>5.</b> <u>Formularz rejestracyjny</u> - formularz wypełniany przez Użytkownika, służący do rejestracji w Serwisie<br>
+            <b>6.</b> <u>Regulamin</u> - niniejszy regulamin;<br>
+            <b>7.</b> <u>Usługi</u> - usługi świadczone przez Usługodawcę w ramach Serwisu internetowego;<br>
+            <b>8.</b> <u>Drop</u> - premiera kolekcji ubrań w danym sklepie
+          </p>
+          <p><b>2.</b> Niniejszy Regulamin określa:</p>
+          <p class="ml-3">
+            <b>a.</b> rodzaj, zakres oraz warunki świadczenia usług drogą elektroniczną przez Administratora;<br>
+            <b>b.</b> prawa i obowiązki Użytkowników i Usługodawcy
+          </p><br>
+          <h5><b>§</b> Wymogi techniczne</h5><br>
+          <p><b>1.</b> Do korzystania z Serwisu, niezbędne jest spełnienie następujących minimalnych wymagań technicznych:</p>
+          <p class="ml-3">
+            <b>1.</b> posiadanie komputera lub innego urządzenia multimedialnego;<br>
+            <b>2.</b> dostęp do sieci Internet;<br>
+            <b>3.</b> posiadanie przeglądarki internetowej ze wsparciem dla HTML5 i CSS3;<br>
+            <b>4.</b> posiadanie aktywnego konta poczty elektronicznej (e-mail)<br>
+          </p><br>
+          <h5><b>§</b> Usługi</h5><br>
+          <p><b>1.</b>  Dropthon świadczy usługi drogą elektroniczną za pomocą serwisu internetowego <a href="https://dropthon.com/" class="text-danger">dropthon.com</a>:</p>
+          <p class="ml-3">
+            <b>1.</b> Usługa Strony;<br>
+            <b>2.</b> Usługa Panelu użytkownika;<br>
+            <b>3.</b> Usługa Bota<br>
+          </p>
+          <p><b>2.</b> Usługa Strony polega na:</p>
+          <p class="ml-3">
+            <b>1.</b> Udostępnianiu treści i informacji o Serwisie, zakresie działalności Dropthona, informacji związanych ze świadczonymi produktami i usługami<br>
+            <b>2.</b> Udostępnianiu odnośników do portali społecznościowych lub innych stron powiązanych ze świadczonymi Usługami.<br>
+          </p>
+          <p><b>3.</b> Usługa Panelu użytkownika polega na:</p>
+          <p class="ml-3">
+            <b>1.</b> Umożliwieniu przeglądania nadchodzących Dropów, pobranych ze stron wspieranych sklepów;<br>
+            <b>2.</b> Umożliwieniu edycji, bądź usunięcia swoich danych osobowych z naszej bazy danych;<br>
+            <b>3.</b> Umożliwieniu zmiany ustawień Usługi Bota;<br>
+            <b>4.</b> Umożliwieniu realizacji płatności za oferowane przez Administratora usługi.<br>
+          </p>
+          <p><b>4.</b> Usługa Bota polega na:</p>
+          <p class="ml-3">
+            <b>1.</b> Realizacji usługi kupienia przedmiotu z zaplanowanego Dropa.<br>
+          </p><br>
+          <h5><b>§</b> Rejestracja i logowanie</h5><br>
+          <p><b>1.</b> Umowa o świadczenie Usług zostaje zawarta z Usługobiorcą z chwilą prawidłowego wypełnienia Formularza rejestracyjnego i założenia konta.</p>
+          <p><b>2.</b> Prawidłowe wypełnienie Formularza rejestracyjnego polega na podaniu nazwy użytkownika, adresu e-mail oraz hasła.</p>
+          <p><b>3.</b> Użytkownik wypełniając i wysyłając Formularz rejestracyjny oświadcza, że:</p>
+          <p class="ml-3">
+            <b>a.</b> podane w nim dane są kompletne, zgodne ze stanem faktycznym oraz nie naruszają jakichkolwiek praw osób trzecich,<br>
+            <b>b.</b> jest uprawniony do zawarcia umowy o świadczenie Usługi.
+          </p>
+          <p><b>4.</b> Adres poczty elektronicznej będzie wykorzystywany do wszelkiej korespondencji związanej ze świadczeniem Usługi.</p>
+          <p><b>5.</b> Usługodawca może odmówić utworzenia konta, zablokować lub usunąć istniejące konto, jeżeli jego nazwa jest już używa w bazie danych.</p>
+          <p><b>6.</b> Rejestracja konta w Serwisie jest dobrowolna i bezpłatna.</p>
+          <p><b>7.</b> Po zarejestrowaniu konta w Serwisie internetowym każdorazowe logowanie odbywa się przy użyciu danych podanych w Formularzu rejestracyjnym.</p><br>
+          <h5><b>§</b> Prawa i obowiązki Usługodawcy i Użytkowników</h5><br>
+          <p><b>1.</b> Usługodawca zastrzega sobie prawo do:</p>
+          <p class="ml-3">
+            <b>a.</b> przejściowego zaprzestania świadczenia Usługi ze względu na czynności konserwacyjne lub związane z modyfikacją Serwisu,<br>
+            <b>b.</b> wysyłania komunikatów technicznych związanych z funkcjonowaniem Usługi,<br>
+            <b>c.</b> odmowy świadczenia Usług jeśli Użytkownik narusza Regulamin,<br>
+            <b>d.</b> dowolnej modyfikacji świadczonych Usług, narzędzi oraz sposobu działania Serwisów, w celu poprawy działalności Serwisu.<br>
+          </p>
+          <p><b>2.</b> Usługodawca zastrzega sobie prawo do zaprzestania świadczenia Usługi, usunięcia wszelkich danych Usługobiorców oraz podjęcia wszelkich innych dozwolonych prawem czynności związanych z Serwisem.</p>
+          <p><b>3.</b> Użytkownik ma prawo do zarządzania swoimi danymi w dowolnym momencie, za pośrednictwem zakładki "Konto" w Serwisie.</p><br>
+          <h5><b>§</b> Zmiana Regulaminu</h5><br>
+          <p><b>1.</b> Regulamin może zostać zmieniony przez Usługodawcę z zastrzeżeniem, że zaktualizowany Regulamin zostanie udostępniony w Serwisie internetowym.</p>
+          <p><b>2.</b> W przypadku braku akceptacji zmiany Regulaminu przez Usługobiorcę, może on usunąć Konto i wówczas postanowienia nowego Regulaminu nie będą miały wobec niego zastosowania.</p>
+          <p><b>3.</b> Użytkownikowi, który nie akceptuje wprowadzonych w Regulaminie zmian, przysługuje uprawnienie do rozwiązania umowy o świadczenie Usług drogą elektroniczną.</p><br>
+          <h5><b>§</b> Postępowanie reklamacyjne</h5><br>
+          <p><b>1.</b> Użytkownik ma prawo złożyć reklamację w sprawie dotyczącej realizacji Usług.</p>
+          <p><b>2.</b> Reklamacje rozpatruje Usługodawca.</p>
+          <p><b>3.</b> Prawidłowo złożona reklamacja powinna zawierać następujące dane:</p>
+          <p class="ml-3">
+            <b>a.</b> imię, nazwisko oraz adres poczty elektronicznej użytkownika;<br>
+            <b>b.</b> nazwę Usługi, której reklamacja dotyczy;<br>
+            <b>c.</b> przedmiot reklamacji;<br>
+            <b>d.</b> okoliczności uzasadniające reklamację.<br>
+          </p><br>
+          <p><b>4.</b> Reklamacje nie zawierające powyższych danych nie będą rozpatrywane przez Usługodawcę.</p>
+          <p><b>5.</b> Reklamacja zostanie rozpatrzona pozytywnie jedynie w przypadku nieprawidłowego działania Usługi lub/i problemów niepowstałych z winy Użytkownika.</p>
+          <p><b>6.</b> Reklamację należy składać na adres poczty elektronicznej: <a href="mailto:customer@dropthon.com" class="text-danger">customer@dropthon.com</a>.</p><br>
+          <h5><b>§</b> Pozyskanie treści Regualminu</h5><br>
+          <p><b>1.</b> Regulamin jest dostępny do wglądu w formie elektronicznej na stronie internetowej: <a href="https://dropthon.com/tos" class="text-danger">dropthon.com/tos</a>.</p><br>
+          <h5><b>§</b> Rozwiązanie umowy lub odstąpienie od umowy</h5><br>
+          <p><b>1.</b> Umowa o świadczenie Usług może być rozwiązana przez którąkolwiek ze stron.</p>
+          <p><b>2.</b> W dowolnym momencie Użytkownik ma prawo rozwiązać umowę o świadczenie Usług poprzez samodzielne usunięcie swojego konta.</p>
+          <p><b>3.</b> Usługodawca ma prawo rozwiązać umowę o świadczenie Usług w trybie natychmiastowym, w tym usunąć konto Usługobiorcy.</p>
+          <p><b>4.</b> O rozwiązaniu umowy o świadczenie Usług Usługodawca poinformuje Usługobiorcę (jeśli istnieje taka techniczna możliwość) najpóźniej w terminie 24 godzin od momentu rozwiązania.</p><br>
+          <h5><b>§</b> Termin wejścia w życie Regualminu</h5><br>
+          <p><b>1.</b> Regulamin wchodzi w życie w dniu 29 listopada 2020 roku.</p><br>
+          <h5><b>§</b> Postanowienia końcowe</h5><br>
+          <p><b>1.</b> Wszelkie spory związane ze świadczeniem Usług zgodnie z Regulaminem będą rozstrzygane przez sąd arbitrażowy.</p>
+          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowane jest w <a href="https://dropthon.com/privacy" class="text-danger">Polityce Prywatności</a>.</p>
     </section>
     <div class="footer-area py-5">
       <div class="container">
