--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
-        <!--<a href="#" class="btn radius-btn">JUŻ WKRÓTCE!</a>
-        <a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
-        <div id="flipdown" class="flipdown"></div> <script>var _0x10fe=['getEl','versi','MINUT','entLi','ement','DNI','ngs','inner','start','SEKUN','ver','stene','DOMCo','ById','addEv'];(function(_0x52658e,_0x3d4ad3){var _0x275f57=function(_0x34220a){while(--_0x34220a){_0x52658e['push'](_0x52658e['shift']());}};_0x275f57(++_0x3d4ad3);}(_0x10fe,0x2267+0x57*-0x4a+-0x802));var _0x2ce0=function(_0x52658e,_0x3d4ad3){_0x52658e=_0x52658e-(0x2267+0x57*-0x4a+-0x941);var _0x275f57=_0x10fe[_0x52658e];return _0x275f57;};var _0x2afece=_0x2ce0;document[_0x2afece('0xa')+_0x2afece('0xe')+_0x2afece('0x7')+'r'](_0x2afece('0x8')+'ntent'+'Loade'+'d',()=>{var _0x18830a=_0x2afece,_0x3fcde9={};_0x3fcde9['headi'+_0x18830a('0x2')]=[_0x18830a('0x1'),'GODZI'+'N',_0x18830a('0xd'),_0x18830a('0x5')+'D'];var _0xa4aba1=new FlipDown(0x6534e661+0xb6*0x91a167+-0x6cf97dac,_0x3fcde9)[_0x18830a('0x4')](),_0x26db81=document[_0x18830a('0xb')+_0x18830a('0x0')+_0x18830a('0x9')](_0x18830a('0x6'));_0x26db81[_0x18830a('0x3')+'HTML']=_0xa4aba1[_0x18830a('0xc')+'on'];});</script> <style>.rotor-group-heading{font-family:"Roboto"}</style>
+        <a href="https://panel.dropthon.com/" class="btn radius-btn">PANEL LOGOWANIA</a>
+        <!--<a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
       </div>
       <img src="example.png" class="example">
     </div>
@@ -101,7 +100,7 @@
                   <li>Jednorazowa płatność</li>
                   <li>Pakiet 10 dropów</li>
                 </ul>
-                <a href="#" class="btn card-btn1">Już wkrótce</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
               </div>
             </div>
           </div>
@@ -116,7 +115,7 @@
                   <li>Jednorazowa płatność</li>
                   <li>Pakiet 30 dropów</li>
                 </ul>
-                <a href="#" class="btn card-btn1">Już wkrótce</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
               </div>
             </div>
           </div>
@@ -131,7 +130,7 @@
                   <li>Pakiet odnawiany co miesiąc</li>
                   <li>Nielimitowane dropy</li>
                 </ul>
-                <a href="#" class="btn card-btn1">Już wkrótce</a>
+                <a href="https://panel.dropthon.com/" class="btn card-btn1">Kup teraz</a>
               </div>
             </div>
           </div>
