--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome-animation@0.2.1/dist/font-awesome-animation.min.css" integrity="sha256-OksDpsEotGZHyoFCHRsdsld3UaZrCcE2d8jXU8rBjHo=" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
    </head>
    <body style="background-color: #fff5f5; overflow-x: hidden">
     <section>
@@ -22,7 +22,7 @@
         <h1 class="title-main">Najbardziej<br>prywatny<br>streetwear bot.</h1><br>
         <a href="#more" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
       </div>
-      <img src="example.png" class="example">
+      <img src="img/example.png" class="example">
     </div>
     <section class="service-area section-padding2" style="background-color: #fff" id="more">
       <div class="container">
