--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
-        <a href="https://panel.dropthon.com/" class="btn radius-btn">PANEL LOGOWANIA</a>
-        <!--<a class="popup-video video-btn ani-btn" href=""><i class="fas fa-play"></i></a>-->
+        <a href="https://panel.dropthon.com/" class="btn radius-btn py-4 px-4"><i class="fa fa-sign-in font-weight-bold"></i> LOGOWANIE</a>
+        <a href="/faq" class="btn radius-btn py-4 px-4"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
       </div>
       <img src="img/example.png" class="example">
     </div>
