--- a/tos.html
+++ b/tos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Dropthon</title>
+    <title>Regulamin ~ Dropthon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -19,6 +19,7 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>przyjazny<br>streetwear bot.</h1><br>
+        <a href="/" class="btn radius-btn py-4 px-4"><i class="fa fa-undo"></i></a>
         <a href="#more" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
       </div>
       <img src="img/example.png" class="example">
