--- a/faq.html
+++ b/faq.html
@@ -20,8 +20,8 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najczęściej<br>zadawane<br>pytania</h1><br>
-        <a href="/" class="btn radius-btn py-4 px-4"><i class="fa fa-undo"></i></a>
-        <a href="#faq" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
+        <a href="/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="#faq" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
       </div>
       <img src="img/example.png" class="example">
     </div>
