--- a/privacy.html
+++ b/privacy.html
@@ -19,8 +19,8 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>prywatny<br>streetwear bot.</h1><br>
-        <a href="/" class="btn radius-btn py-4 px-4"><i class="fa fa-undo"></i></a>
-        <a href="#more" class="btn radius-btn">DOWIEDZ SIĘ WIĘCEJ</a>
+        <a href="/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
       </div>
       <img src="img/example.png" class="example">
     </div>
