--- a/faq.html
+++ b/faq.html
@@ -45,7 +45,7 @@
                 <span><b>Jakie sklepy są wspierane?</b></span>
               </div>
               <div class="card-bottom">
-                <p>Dropthon oferuje wsparcie dla <span class="font-weight-bold">Zalando Lounge</span>. Pracujemy aktualnie nad dodaniem <span class="font-weight-bold">Nike SNKRS</span>, a w niedalekiej przyszłości pojawiać będą się kolejne sklepy.</p>
+                <p>Dropthon oferuje wsparcie dla <span class="font-weight-bold">Zalando Lounge</span> oraz <span class="font-weight-bold">Nike SNKRS</span>. W najbliższej przyszłości pojawiać będą się kolejne sklepy.</p>
               </div>
             </div>
           </div>
