--- a/pl/privacy.html
+++ b/pl/privacy.html
@@ -5,12 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Polityka prywatności ~ Dropthon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha256-T/zFmO5s/0aSwc6ics2KLxlfbewyRz6UNw1s3Ppf5gE=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/font-awesome-animation.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome-animation.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
    </head>
    <body style="background-color: #fff5f5; overflow-x: hidden">
     <section>
@@ -19,10 +19,10 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>prywatny<br>streetwear bot.</h1><br>
-        <a href="/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
         <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
       </div>
-      <img src="img/example.png" class="example">
+      <img src="/static/img/example.png" class="example">
     </div>
     <section class="service-area section-padding2" style="background-color: #fff" id="more">
       <div class="container">
@@ -64,14 +64,14 @@
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/privacy">Polityka prywatności</a>  -  <a href="/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
             </div>
           </div>
         </div>
       </div>
     </div>
    </footer>
-   <script src="js/jquery.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
    <script>$(document).ready(function(){$("a").on("click",function(o){var t;""!==this.hash&&(o.preventDefault(),t=this.hash,$("html, body").animate({scrollTop:$(t).offset().top},800,function(){window.location.hash=t}))})});</script>
   </body>
 </html>
