--- a/pl/tos.html
+++ b/pl/tos.html
@@ -5,12 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Regulamin ~ Dropthon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha256-T/zFmO5s/0aSwc6ics2KLxlfbewyRz6UNw1s3Ppf5gE=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/font-awesome-animation.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome-animation.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
    </head>
    <body style="background-color: #fff5f5; overflow-x: hidden">
     <section>
@@ -19,10 +19,10 @@
     <div class="d-flex align-items-center" style="height: 100vh">
       <div class="mx-auto" style="width: 70vw">
         <h1 class="title-main">Najbardziej<br>przyjazny<br>streetwear bot.</h1><br>
-        <a href="/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
+        <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
         <a href="#more" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
       </div>
-      <img src="img/example.png" class="example">
+      <img src="/static/img/example.png" class="example">
     </div>
     <section class="service-area section-padding2" style="background-color: #fff" id="more">
       <div class="container">
@@ -37,7 +37,7 @@
           <h5><b>§</b> Postanowienia ogólne</h5><br>
           <p><b>1.</b> Ilekroć w niniejszym Regulaminie są użyte następujące określenia, należy przez nie rozumieć:</p>
           <p class="ml-3">
-            <b>2.</b> <u>Serwis</u> - serwis internetowy dostępny pod adresem <a href="https://dropthon.com/" class="text-danger">dropthon.com</a>;<br>
+            <b>2.</b> <u>Serwis</u> - serwis internetowy dostępny pod adresem <a href="https://dropthon.com/pl/" class="text-danger">dropthon.com</a>;<br>
             <b>3.</b> <u>Administrator, Usługodawca</u> - Stanisławowski Research & Development;<br>
             <b>4.</b> <u>Użytkownik, Usługobiorca</u> - każda osoba, która dokonała rejestracji konta w Serwisie oraz korzysta z jego funkcjonalności;<br>
             <b>5.</b> <u>Formularz rejestracyjny</u> - formularz wypełniany przez Użytkownika, służący do rejestracji w Serwisie<br>
@@ -59,7 +59,7 @@
             <b>4.</b> posiadanie aktywnego konta poczty elektronicznej (e-mail)<br>
           </p><br>
           <h5><b>§</b> Usługi</h5><br>
-          <p><b>1.</b>  Dropthon świadczy usługi drogą elektroniczną za pomocą serwisu internetowego <a href="https://dropthon.com/" class="text-danger">dropthon.com</a>:</p>
+          <p><b>1.</b>  Dropthon świadczy usługi drogą elektroniczną za pomocą serwisu internetowego <a href="https://dropthon.com/pl/" class="text-danger">dropthon.com</a>:</p>
           <p class="ml-3">
             <b>1.</b> Usługa Strony;<br>
             <b>2.</b> Usługa Panelu użytkownika;<br>
@@ -121,7 +121,7 @@
           <p><b>5.</b> Reklamacja zostanie rozpatrzona pozytywnie jedynie w przypadku nieprawidłowego działania Usługi lub/i problemów niepowstałych z winy Użytkownika.</p>
           <p><b>6.</b> Reklamację należy składać na adres poczty elektronicznej: <a href="mailto:customer@dropthon.com" class="text-danger">customer@dropthon.com</a>.</p><br>
           <h5><b>§</b> Pozyskanie treści Regualminu</h5><br>
-          <p><b>1.</b> Regulamin jest dostępny do wglądu w formie elektronicznej na stronie internetowej: <a href="https://dropthon.com/tos" class="text-danger">dropthon.com/tos</a>.</p><br>
+          <p><b>1.</b> Regulamin jest dostępny do wglądu w formie elektronicznej na stronie internetowej: <a href="https://dropthon.com/pl/tos" class="text-danger">dropthon.com/pl/tos</a>.</p><br>
           <h5><b>§</b> Rozwiązanie umowy lub odstąpienie od umowy</h5><br>
           <p><b>1.</b> Umowa o świadczenie Usług może być rozwiązana przez którąkolwiek ze stron.</p>
           <p><b>2.</b> W dowolnym momencie Użytkownik ma prawo rozwiązać umowę o świadczenie Usług poprzez samodzielne usunięcie swojego konta.</p>
@@ -131,21 +131,21 @@
           <p><b>1.</b> Regulamin wchodzi w życie w dniu 29 listopada 2020 roku.</p><br>
           <h5><b>§</b> Postanowienia końcowe</h5><br>
           <p><b>1.</b> Wszelkie spory związane ze świadczeniem Usług zgodnie z Regulaminem będą rozstrzygane przez sąd arbitrażowy.</p>
-          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowane jest w <a href="https://dropthon.com/privacy" class="text-danger">Polityce Prywatności</a>.</p>
+          <p><b>2.</b> Sposób przechowywania danych osobowych Użytkownika uregulowane jest w <a href="https://dropthon.com/pl/privacy" class="text-danger">Polityce Prywatności</a>.</p>
     </section>
     <div class="footer-area py-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-12">
             <div class="footer-copy-right">
-               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/privacy">Polityka prywatności</a>  -  <a href="/tos">Regulamin</a></p>
+               <p>Copyleft 2020 <a href="https://stanislawowski.pl/" target="_blank">Stanisławowski Research & Development</a>  -  <a href="/pl/privacy">Polityka prywatności</a>  -  <a href="/pl/tos">Regulamin</a></p>
             </div>
           </div>
         </div>
       </div>
     </div>
    </footer>
-   <script src="js/jquery.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
    <script>$(document).ready(function(){$("a").on("click",function(o){var t;""!==this.hash&&(o.preventDefault(),t=this.hash,$("html, body").animate({scrollTop:$(t).offset().top},800,function(){window.location.hash=t}))})});</script>
   </body>
 </html>
