Remove inline CSS

--- a/pl/faq.html
+++ b/pl/faq.html
@@ -13,12 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
    </head>
-   <body style="background-color: #fff5f5; overflow-x: hidden">
+   <body>
     <section>
       <div class="skewed"></div>
     </section>
-    <div class="d-flex align-items-center" style="height: 100vh">
-      <div class="mx-auto" style="width: 70vw">
+    <div class="d-flex align-items-center h-100vh">
+      <div class="mx-auto w-70vw">
         <h1 class="title-main">Najczęściej<br>zadawane<br>pytania</h1><br>
         <a href="/pl/" class="btn radius-btn py-3 px-3"><i class="fa fa-undo"></i></a>
         <a href="#faq" class="btn radius-btn py-3 px-3"><i class="fa fa-caret-down"></i> WIĘCEJ</a>
