--- a/pl/index.html
+++ b/pl/index.html
@@ -13,19 +13,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
    </head>
-   <body style="background-color: #fff5f5; overflow-x: hidden">
+   <body>
     <section>
       <div class="skewed"></div>
     </section>
-    <div class="d-flex align-items-center" style="height: 100vh">
-      <div class="mx-auto" style="width: 70vw">
+    <div class="d-flex align-items-center h-100vh">
+      <div class="mx-auto w-70vw">
         <h1 class="title-main">Najbardziej<br>zaawansowany<br>streetwear bot.</h1><br>
         <a href="https://panel.dropthon.com/" class="btn radius-btn py-3 px-3"><i class="fa fa-sign-in font-weight-bold"></i> LOGOWANIE</a>
         <a href="/pl/faq" class="btn radius-btn py-3 px-3"><i class="fa fa-question-circle font-weight-bold"></i> FAQ</a>
       </div>
       <img src="/static/img/example.png" class="example">
     </div>
-    <section class="service-area section-padding2" style="background-color: #fff">
+    <section class="service-area section-padding2 bg-white">
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6">
