--- a/pl/tos.html
+++ b/pl/tos.html
@@ -123,7 +123,7 @@
           <p><b>4.</b> Reklamacje nie zawierające powyższych danych nie będą rozpatrywane przez Usługodawcę.</p>
           <p><b>5.</b> Reklamacja zostanie rozpatrzona pozytywnie jedynie w przypadku nieprawidłowego działania Usługi lub/i problemów niepowstałych z winy Użytkownika.</p>
           <p><b>6.</b> Reklamację należy składać na adres poczty elektronicznej: <a href="mailto:customer@dropthon.com" class="text-danger">customer@dropthon.com</a>.</p><br>
-          <h5><b>§</b> Pozyskanie treści Regualminu</h5><br>
+          <h5><b>§</b> Pozyskanie treści Regulaminu</h5><br>
           <p><b>1.</b> Regulamin jest dostępny do wglądu w formie elektronicznej na stronie internetowej: <a href="https://dropthon.com/pl/tos" class="text-danger">dropthon.com/pl/tos</a>.</p><br>
           <h5><b>§</b> Rozwiązanie umowy lub odstąpienie od umowy</h5><br>
           <p><b>1.</b> Umowa o świadczenie Usług może być rozwiązana przez którąkolwiek ze stron.</p>
